# my-python-package-2

./: CHANGELOG.md  pyproject.toml
.github/workflows/: dev.yml  dev_checks.yml  main.yml  main_checks.yml  pytest.yml  release.yml  ruff.yml  test-only.yml
my_package/: __init__.py
src/hds_functions/: __init__.py  data_privacy.py
tests/: test_data_privacy.py
